@@ -37,7 +37,6 @@ class Beaming_info_list;
 class Bezier;
 class Bezier_bow;
 class Book;
-class Output_def;
 class Break_algorithm;
 class Change_iterator;
 class Change_translator;
@@ -49,27 +48,31 @@ class Context_specced_music;
 class Engraver;
 class Engraver;
 class Engraver_group_engraver;
+class Event;
+class Event_chord;
+class Event_chord_iterator;
 class Folded_repeat_iterator;
 class Font_metric;
 class Font_size_engraver;
 class Global_context;
-class Grace_fixup;
 class Gourlay_breaking;
+class Grace_fixup;
 class Grace_iterator;
 class Grace_music;
+class Grob;
 class Hara_kiri_engraver;
 class Hara_kiri_line_group_engraver;
 class Includable_lexer;
-class Input_file_results;
 class Input;
+class Input_file_results;
 class Item;
 class Key_performer;
 class Keyword_ent;
 class Keyword_table;
-class Ligature_engraver;
 class Ligature_bracket_engraver;
+class Ligature_engraver;
+class Lily_lexer;
 class Line_group_engraver_group;
-class System;
 class Lookup;
 class Lyric_combine_music;
 class Lyric_combine_music_iterator;
@@ -93,51 +96,47 @@ class Midi_tempo;
 class Midi_text;
 class Midi_time_signature;
 class Midi_track;
-class Stencil;
+class Modified_font_metric;
 class Moment;
 class Music;
 class Music_iterator;
 class Music_list;
 class Music_output;
-class Output_def;
 class Music_sequence;
 class Music_wrapper;
 class Music_wrapper_iterator;
-class Page;
-class Pitch;
-class Lily_lexer;
 class Note_performer;
+class Output_def;
+class Output_def;
+class Output_def;
 class Output_property;
+class Page;
 class Paper_book;
 class Paper_column;
-class Output_def;
-class Paper_system;
 class Paper_outputter;
 class Paper_score;
 class Paper_stream;
+class Paper_system;
 class Performance;
 class Performer;
 class Performer_group_performer;
 class Piano_bar_engraver;
+class Pitch;
 class Pitch_squash_engraver;
 class Property_iterator;
 class Rational;
 class Relative_octave_music;
 class Repeated_music;
-class Event;
-class Event_chord;
-class Event_chord_iterator;
-class Modified_font_metric;
 class Scheme_hash_table;
 class Score;
-class Grob;
-class Score_engraver;
 class Score_context;
+class Score_engraver;
 class Score_performer;
 class Sequential_music;
 class Sequential_music_iterator;
 class Simple_music_iterator;
 class Simple_spacer;
+class Simple_spacer_wrapper;
 class Simultaneous_music;
 class Simultaneous_music_iterator;
 class Slur_bezier_bow;
@@ -145,8 +144,10 @@ class Span_score_bar_engraver;
 class Spanner;
 class Staff_group_bar_engraver;
 class Staff_performer;
+class Stencil;
 class Swallow_engraver;
 class Swallow_performer;
+class System;
 class Tempo_performer;
 class Tex_font_metric;
 class Tie;
