@@ -129,7 +129,7 @@ Simple_spacer::range_stiffness (int l, int r) const
 }
 
 Real
-Simple_spacer::is_activelocking_force () const
+Simple_spacer::active_blocking_force () const
 {
   Real bf = - infinity_f; 
   for (int i=0; i < springs_.size (); i++)
@@ -180,7 +180,7 @@ Simple_spacer::my_solve_linelen ()
 {
   while (is_active ())
     {
-      force_ = is_activelocking_force ();
+      force_ = active_blocking_force ();
       Real conf = configuration_length ();
 
       if (conf < line_len_)
@@ -199,7 +199,7 @@ Simple_spacer::my_solve_natural_len ()
 {
   while (is_active ())
     {
-      force_ = is_activelocking_force () >? 0.0;
+      force_ = active_blocking_force () >? 0.0;
 
       if (force_ < 1e-8) // ugh.,
 	break;
@@ -208,8 +208,228 @@ Simple_spacer::my_solve_natural_len ()
     }
 }
 
+LY_DEFINE(ly_solve_spring_rod_problem, "ly:solve-spring-rod-problem",
+	  4, 1, 0, (SCM springs, SCM rods, SCM length, SCM ragged),
+	  "Solve a spring and rod problem for @var{count} objects, that "
+	  "are connected by @var{count-1} springs, and an arbitrary number of rods "
+	  "Springs have the format (ideal, hooke) and rods (idx1, idx2, distance) "
+	  "@var{length} is a number, @var{ragged} a boolean "
+	  "Return: a list containing the force (#f for non-satisfied constraints)"
+	  "followed by positions of the objects."
+	  )
+{
+  SCM_ASSERT_TYPE (scm_ilength (springs) >= 0, springs, SCM_ARG1, __FUNCTION__, "list of springs");
+  SCM_ASSERT_TYPE (scm_ilength (rods) >= 0, rods, SCM_ARG2, __FUNCTION__, "list of rods");
+  SCM_ASSERT_TYPE (scm_is_number (length) || length == SCM_BOOL_F,
+		   length, SCM_ARG3, __FUNCTION__, "number or #f");
+
+  bool is_ragged   = ragged == SCM_BOOL_T; 
+  Simple_spacer spacer; 
+  for (SCM s = springs; ly_c_pair_p (s); s = ly_cdr (s))
+    {
+      Real ideal = scm_to_double (ly_caar (s));
+      Real hooke = scm_to_double (ly_cadar (s));
+
+      spacer.add_spring (ideal, hooke);
+    }
+
+  for (SCM s = rods; ly_c_pair_p (s); s = ly_cdr (s))
+    {
+      SCM entry = ly_car (s);
+      int l = scm_to_int (ly_car (s));
+      int r = scm_to_int (ly_cadr (s));
+      entry = ly_cddr (s);
+      
+      Real distance = scm_to_double (ly_car (s));
+      spacer.add_rod (l, r, distance);
+    }
+
+  if (is_ragged)
+    spacer.my_solve_natural_len ();
+  else
+    {
+      spacer.line_len_ = scm_to_double (length);
+      
+      spacer.my_solve_linelen ();
+    }
+
+  Array<Real> posns;
+  posns.push (0.0);
+  for (int i = 0; i < spacer.springs_.size(); i++)
+    {
+      Real l = spacer.springs_[i].length ((is_ragged) ? 0.0 : spacer.force_);
+      posns.push (posns.top() + l);
+    }
+
+  SCM force_return = scm_from_double (spacer.force_);
+  if (is_ragged)
+    {
+      Real len = posns.top ();
+      if (spacer.line_len_ - len  >= 0)
+	force_return  = scm_from_double ((spacer.line_len_ - len)
+					 * spacer.active_springs_stiffness ());
+      else
+	force_return = SCM_BOOL_F;
+    }
+
+  SCM retval= SCM_EOL;
+  for (int i = posns.size(); i--;)
+    {
+      retval = scm_cons (scm_from_double (posns[i]), retval); 
+    }
+
+  retval = scm_cons (force_return, retval);
+  return retval;  
+}
+	  
+	  
+/****************************************************************/
+
+Spring_description::Spring_description ()
+{
+  ideal_ =0.0;
+  hooke_ =0.0;
+  is_active_ = true;
+  block_force_ = 0.0;
+}
+
+
+bool
+Spring_description::is_sane () const
+{
+  return (hooke_ > 0) &&  !isinf (ideal_) && !isnan (ideal_);
+}
+
+Real
+Spring_description::length (Real f) const
+{
+  if (!is_active_)
+    f = block_force_;
+  return ideal_ + f / hooke_ ;
+}
+/****************************************************************/
+
+
+/*
+  
+  TODO: should a add penalty for widely varying spring forces (caused
+  by constraints, eg.
+
+
+         =====  
+         |   |
+  o|o|  x ##x
+
+
+  The ## forces the notes apart; we shouldn't allow the O's to touch
+  this closely.
+  
+ */
 void
-Simple_spacer::add_columns (Link_array<Grob> const &icols)
+Simple_spacer_wrapper::solve (Column_x_positions *positions, bool ragged) 
+{
+  if (ragged)
+    spacer_->my_solve_natural_len ();
+  else
+    spacer_->my_solve_linelen ();
+
+  positions->force_ = spacer_->force_;
+  
+  /*
+    We used to have a penalty for compression, no matter what, but that
+    fucked up wtk1-fugue2 (taking 3 full pages.)
+  */
+  positions->config_.push (spacer_->indent_);
+  for (int i=0; i < spacer_->springs_.size (); i++)
+    {
+      Real  l = spacer_->springs_[i].length ((ragged) ? 0.0 : spacer_->force_);
+      positions->config_.push (positions->config_.top () + l);
+      /*
+	we have l>= 0 here, up to rounding errors 
+      */
+    }
+
+  /*
+    For raggedright, we must have a measure of music density: this is
+    to prevent lots of short lines (which all have force = 0).
+    */
+  if (ragged)
+    {
+      Real len = positions->config_.top ();
+      if (spacer_->line_len_ - len  >= 0)
+	positions->force_ = ((spacer_->line_len_ - len)
+			     * spacer_->active_springs_stiffness ());
+      else
+	{
+	  positions->force_ = 0.0;
+	  /*
+	    Don't go past end-of-line in ragged right.
+	   */
+	  positions->satisfies_constraints_ = false;
+	}
+    }
+
+
+  positions->cols_ = spaced_cols_;
+  positions->loose_cols_ = loose_cols_;
+  positions->satisfies_constraints_ =
+    positions->satisfies_constraints_ && spacer_->is_active ();
+
+  /*
+    Check if breaking constraints are met.
+   */
+  bool break_satisfy = true;
+  int sz =  positions->cols_.size ();
+  for (int i = sz; i--; )
+    {
+      SCM p = positions->cols_[i]->get_property ( "penalty");
+      if (ly_c_number_p (p))
+	{
+	  if (ly_scm2double (p) < -9999)
+	    break_satisfy = break_satisfy && (i == 0 || i == sz -1);
+	  if (ly_scm2double (p) > 9999)
+	    break_satisfy = break_satisfy && !(i == 0 || i == sz -1);
+	}
+      
+    }
+
+  positions->satisfies_constraints_ =
+    positions->satisfies_constraints_ && break_satisfy;
+}
+
+void
+Simple_spacer::add_spring (Real ideal, Real hooke)
+{
+  Spring_description desc;
+
+  desc.ideal_ = ideal;
+  desc.hooke_ = hooke;
+  if (!desc.is_sane ())
+    {
+      programming_error ("Insane spring found. Setting to unit spring.");
+
+      desc.hooke_ = 1.0;
+      desc.ideal_ = 1.0;
+    }
+  
+  if (isinf (hooke))
+    {
+      desc.is_active_ = false;
+    }
+  else
+    {
+      /*
+	desc.is_active_ ? 
+      */
+      desc.block_force_ = - desc.hooke_ * desc.ideal_; // block at distance 0
+      
+      active_count_ ++;
+    }
+  springs_.push (desc);
+}
+
+void
+Simple_spacer_wrapper::add_columns (Link_array<Grob> const &icols)
 {
   Link_array<Grob> cols (icols);
   
@@ -236,43 +456,15 @@ Simple_spacer::add_columns (Link_array<Grob> const &icols)
 	    spring = sp;
 	}
 
-      Spring_description desc;
-      if (spring)
-	{
-	  desc.ideal_ = spring->distance_;
-	  desc.hooke_ = spring->strength_;
-	}
-      else
-	{
-	  programming_error (_f ("No spring between column %d and next one",
-				Paper_column::get_rank (cols[i])
-				));
-	  desc.hooke_ = 1.0;
-	  desc.ideal_ = default_space_;
+      if (!spring)
+	programming_error (_f ("No spring between column %d and next one",
+			       Paper_column::get_rank (cols[i])
+			       ));
 
-	  continue;
-	}
-
-      if (!desc.is_sane ())
-	{
-	  programming_error ("Insane spring found. Setting to unit spring.");
-
-	  desc.hooke_ = 1.0;
-	  desc.ideal_ = 1.0;
-	}
-
-      if (isinf (desc.hooke_))
-	{
-	  desc.is_active_ = false;
-	  springs_.push (desc);
-	}
-      else
-	{
-	  desc.block_force_ = - desc.hooke_ * desc.ideal_; // block at distance 0
-	  springs_.push (desc);
-      
-	  active_count_ ++;
-	}
+      Real ideal = (spring) ? spring->distance_ : spacer_->default_space_;
+      Real hooke = (spring) ? spring->strength_ : 1.0;
+	
+      spacer_->add_spring (ideal, hooke);
     }
   
   for (int i=0; i < cols.size () - 1; i++)
@@ -284,119 +476,23 @@ Simple_spacer::add_columns (Link_array<Grob> const &icols)
 	  int oi = cols.find_index (other);
 	  if (oi >= 0)
 	    {
-	      add_rod (i, oi, ly_scm2double (ly_cdar (s)));
+	      spacer_->add_rod (i, oi, ly_scm2double (ly_cdar (s)));
 	    }
 	}
     }
 }
 
-/*
-  
-  TODO: should a add penalty for widely varying spring forces (caused
-  by constraints, eg.
-
-
-         =====  
-         |   |
-  o|o|  x ##x
-
-
-  The ## forces the notes apart; we shouldn't allow the O's to touch
-  this closely.
-  
- */
-void
-Simple_spacer::solve (Column_x_positions *positions, bool ragged) 
+Simple_spacer_wrapper::Simple_spacer_wrapper ()
 {
-  if (ragged)
-    my_solve_natural_len ();
-  else
-    my_solve_linelen ();
-
-  positions->force_ = force_;
-  
-  /*
-    We used to have a penalty for compression, no matter what, but that
-    fucked up wtk1-fugue2 (taking 3 full pages.)
-  */
-  positions->config_.push (indent_);
-  for (int i=0; i <springs_.size (); i++)
-    {
-      Real  l = springs_[i].length ((ragged) ? 0.0 : force_);
-      positions->config_.push (positions->config_.top () + l);
-      /*
-	we have l>= 0 here, up to rounding errors 
-      */
-    }
-
-  /*
-    For raggedright, we must have a measure of music density: this is
-    to prevent lots of short lines (which all have force = 0).
-    */
-  if (ragged)
-    {
-      Real len = positions->config_.top ();
-      if (line_len_ - len  >= 0)
-	positions->force_ = ((line_len_ - len) *  active_springs_stiffness ());
-      else
-	{
-	  positions->force_ = 0.0;
-	  /*
-	    Don't go past end-of-line in ragged right.
-	   */
-	  positions->satisfies_constraints_ = false;
-	}
-    }
-
-
-  positions->cols_ = spaced_cols_;
-  positions->loose_cols_ = loose_cols_;
-  positions->satisfies_constraints_ =
-    positions->satisfies_constraints_ && is_active ();
-
-  /*
-    Check if breaking constraints are met.
-   */
-  bool break_satisfy = true;
-  int sz =  positions->cols_.size ();
-  for (int i = sz; i--; )
-    {
-      SCM p = positions->cols_[i]->get_property ( "penalty");
-      if (ly_c_number_p (p))
-	{
-	  if (ly_scm2double (p) < -9999)
-	    break_satisfy = break_satisfy && (i == 0 || i == sz -1);
-	  if (ly_scm2double (p) > 9999)
-	    break_satisfy = break_satisfy && !(i == 0 || i == sz -1);
-	}
-      
-    }
-
-  positions->satisfies_constraints_ =
-    positions->satisfies_constraints_ && break_satisfy;
+  spacer_ = new Simple_spacer ();
 }
 
-/****************************************************************/
-
-Spring_description::Spring_description ()
+Simple_spacer_wrapper::~Simple_spacer_wrapper ()
 {
-  ideal_ =0.0;
-  hooke_ =0.0;
-  is_active_ = true;
-  block_force_ = 0.0;
+  delete spacer_;
 }
 
 
-bool
-Spring_description::is_sane () const
+Simple_spacer_wrapper::Simple_spacer_wrapper (Simple_spacer_wrapper const&)
 {
-  return (hooke_ > 0) &&  !isinf (ideal_) && !isnan (ideal_);
-}
-
-Real
-Spring_description::length (Real f) const
-{
-  if (!is_active_)
-    f = block_force_;
-  return ideal_ + f / hooke_ ;
 }
