@@ -1,3 +1,11 @@
+2004-09-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/simple-spacer.cc (LY_DEFINE): ly_solve_spring_rod_problem:
+	export spacing routine to SCM.
+
+	* lily/include/simple-spacer.hh (struct Simple_spacer_wrapper):
+	new class, separate Grobs from interface.
+
 2004-09-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/include/lily-guile.hh: compatibility glue for 1.6
